tooltip handler edit, fix alignment on time input

--- a/src/components/ShareTrajectoryModal/style.css
+++ b/src/components/ShareTrajectoryModal/style.css
@@ -24,6 +24,10 @@
     color: var(--medium-grey);
 }
 
+.time-input-text {
+    padding-top: 8px;
+}
+
 .time-input-container {
     display: flex;
     padding-top: 20px;
